--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,6 @@
-Xframex <loukili.issmael@gmail.com>
-ismail <125493050+Xframex@users.noreply.github.com>
+# This file lists all individuals having contributed content to the repository
+# For how it is generated, see `generate-authors.sh`.
+
+
+ismail loukili <loukil.issmael8@gmail.com>
+Abdellah Dafali <azizlive1900@gmail.com>
